--- a/default-site/pages/index.html
+++ b/default-site/pages/index.html
@@ -1,7 +1,4 @@
 ---
 title: Homepage
-layout: default.html
+layout: app.html
 ---
-<div id="root"></div>
-<script type="text/javascript" src="/js/vendor.bundle.js" charset="utf-8"></script>
-<script type="text/javascript" src="/js/app.js" charset="utf-8"></script>
